# Pick-and-Place-Robotic-Arm-using-Ros2-

./: .gitignore  README.md  Screencast from 01-31-2026 07:43:04 PM.webm  Screencast from 01-31-2026 08:03:41 PM.webm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotiq_controllers/share/robotiq_controllers/: local_setup.sh  package.sh
install/robotiq_description/share/robotiq_description/: local_setup.sh  package.sh
install/ur/share/ur/: local_setup.sh  package.sh
install/ur5e_gripper_gazebo/share/ur5e_gripper_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_bringup/share/ur_bringup/: local_setup.sh  package.sh
install/ur_calibration/lib/ur_calibration/: calibration_correction
install/ur_pick_place/share/ur_pick_place/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_pick_place/share/ur_pick_place/cmake/: ur_pick_placeConfig.cmake
log/: latest_build
src/ur5e_gripper_gazebo/: CMakeLists.txt
src/ur5e_gripper_gazebo/config/: initial_positions.yaml  ur5e_robotiq_controllers.yaml
src/ur5e_gripper_gazebo/launch/: ur5e_robotiq_gazebo.launch.py
src/ur5e_gripper_gazebo/scripts/: pick_and_place.py  simple_pick_and_place.py
src/ur5e_gripper_gazebo/urdf/: ur5e_robotiq.urdf.xacro
src/ur5e_gripper_gazebo/worlds/: pick_place_world.sdf
src/ur_pick_place/: CMakeLists.txt
src/ur_pick_place/config/: pick_and_place.yaml
src/ur_pick_place/launch/: pick_and_place.launch.py
src/ur_pick_place/scripts/: pick_and_place.py
src/ur_pick_place/urdf/: ur5e_robotiq.urdf.xacro
(+36 files in other folders)
